--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/supertest": "^6.0.2",
     "axios": "^1.13.2",
     "axios-cookiejar-support": "^5.0.5",
+    "cheerio": "^1.1.2",
     "docker-compose": "^1.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
