feat(docker): add service dependency for Traefik in e2e compose file

--- a/docker/e2e.compose.yml
+++ b/docker/e2e.compose.yml
@@ -14,6 +14,9 @@ services:
       - ./traefik/dynamic.yml:/etc/traefik/dynamic.yml:ro
 
   app:        
+    depends_on:
+      traefik:
+        condition: service_started  
     build:
       context: ..
       target: production      
