--- a/docker/e2e.compose.yml
+++ b/docker/e2e.compose.yml
@@ -30,6 +30,18 @@ services:
         required: true 
       - path: ../.env.e2e
         required: false            
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "node",
+          "-e",
+          "require('http').get('http://localhost:3000/health', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))"
+        ]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+      start_period: 5s        
 
   postgres:
     volumes:
