--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "node": "22.21.1"
   },
   "scripts": {
-    "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",
-    "e2e": "docker compose -f docker/base.compose.yml -f docker/e2e.compose.yml up --attach app --build",
+    "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",    
     "test:unit": "jest --config testing/jest-configs/jest.unit.config.ts",
     "test:components": "jest --config testing/jest-configs/jest.components.config.ts",
     "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
-    "test:e2e": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest --config testing/jest-configs/jest.e2e.config.ts",
+    "test:e2e": "node scripts/run-e2e-tests.js",
     "build": "nest build",
     "start": "nest start",
     "lint": "eslint \"{src,testing}/**/*.ts\" --fix",  
@@ -91,6 +90,7 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
+    "execa": "^9.6.1",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
