--- a/.env.defaults
+++ b/.env.defaults
@@ -18,3 +18,7 @@ SIGN_OUT_ALL_TOKEN_EXP=10m
 SIGN_OUT_ALL_TOKEN_SECRET=ABC109817839123189MYY
 
 CACHE_TTL_SECONDS=30
+
+ADMIN_USERNAME=admindev
+ADMIN_EMAIL=admindev@hotmail.com
+ADMIN_PASSWORD=AdminDev23!@%#
