--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "node": "22.21.1"
   },
   "scripts": {
-    "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",    
+    "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",
     "test:unit": "jest --config testing/jest-configs/jest.unit.config.ts",
     "test:components": "jest --config testing/jest-configs/jest.components.config.ts",
     "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
     "test:e2e": "node scripts/run-e2e-tests.js",
     "build": "nest build",
     "start": "nest start",
-    "lint": "eslint \"{src,testing}/**/*.ts\" --fix",  
+    "lint": "eslint \"{src,testing}/**/*.ts\" --fix",
     "migration:generate": "docker compose -f docker/dev.compose.yml exec app node scripts/generate-migration.js",
     "dev:migration:run": "docker compose -f docker/dev.compose.yml run --rm migrate",
     "dev:migration:revert": "docker compose -f docker/dev.compose.yml run --rm revert-migrate",
@@ -50,6 +50,7 @@
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
+    "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "joi": "^17.13.3",
     "ms": "^2.1.3",
