--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "graphql": "^16.11.0",
     "graphql-fields": "^2.0.3",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "ioredis": "^5.8.2",
     "joi": "^17.13.3",
     "ms": "^2.1.3",
@@ -79,6 +80,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
     "@types/graphql-fields": "^1.3.9",
+    "@types/hpp": "^0.2.7",
     "@types/jest": "^29.5.14",
     "@types/ms": "^2.1.0",
     "@types/node": "^22.18.5",
