fix(compose): remove `POSTGRES_URL` from migration postgres uri

--- a/docker/base.compose.yml
+++ b/docker/base.compose.yml
@@ -87,4 +87,4 @@ services:
       postgres:
         condition: service_healthy  
     environment:
-      POSTGRES_URI: postgresql://dev:secretpassword@postgres:${POSTGRES_PORT:-5432}/ratewise         
+      POSTGRES_URI: postgresql://dev:secretpassword@postgres:5432/ratewise         
