--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@faker-js/faker": "^9.9.0",
     "@keyv/redis": "^5.1.3",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/apollo": "^13.1.0",
@@ -40,7 +41,6 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@redis/client": "^5.8.2",
-    "@faker-js/faker": "^9.9.0",
     "argon2": "^0.44.0",
     "bullmq": "^5.61.0",
     "cache-manager": "^7.2.4",
@@ -50,6 +50,7 @@
     "dotenv-expand": "^12.0.2",
     "express-session": "^1.18.2",
     "graphql": "^16.11.0",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-fields": "^2.0.3",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
@@ -79,6 +80,7 @@
     "@testcontainers/redis": "^11.5.1",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
+    "@types/graphql-depth-limit": "^1.1.6",
     "@types/graphql-fields": "^1.3.9",
     "@types/hpp": "^0.2.7",
     "@types/jest": "^29.5.14",
