--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/ms": "^2.1.0",
     "@types/node": "^22.18.5",
     "@types/nodemailer": "^7.0.1",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "axios": "^1.13.2",
     "axios-cookiejar-support": "^5.0.5",
