--- a/.env.defaults
+++ b/.env.defaults
@@ -1,4 +1,5 @@
-# Default configuration. Create and `.env.dev` or `.env.test` (integration) file to override
+# Default DEVELOPMENT configuration. 
+# Create and `.env.dev`, `.env.test` (integration) or '.env.e2e' to override.
 
 PORT=3000
 API_BASE_URL=http://localhost:3000
