--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@apollo/server": "^5.4.0",
+    "@as-integrations/express5": "^1.1.2",
     "@faker-js/faker": "^9.9.0",
     "@keyv/redis": "^5.1.3",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
