feat(config): add env **EMAIL_SENDER_ADDRESS**

--- a/.env.defaults
+++ b/.env.defaults
@@ -23,3 +23,5 @@ CACHE_TTL_SECONDS=30
 ADMIN_USERNAME=admindev
 ADMIN_EMAIL=admindev@hotmail.com
 ADMIN_PASSWORD=AdminDev23!@%#
+
+EMAIL_SENDER_ADDRESS=<no-reply@ratewise.dev>
