--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@apollo/server": "^5.4.0",
     "@as-integrations/express5": "^1.1.2",
     "@faker-js/faker": "^9.9.0",
+    "@getbrevo/brevo": "^3.0.1",
     "@keyv/redis": "^5.1.3",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/apollo": "^13.2.4",
