feat(config): add EMAIL_PROVIDER env

--- a/.env.defaults
+++ b/.env.defaults
@@ -25,3 +25,4 @@ ADMIN_EMAIL=admindev@hotmail.com
 ADMIN_PASSWORD=AdminDev23!@%#
 
 EMAIL_SENDER_ADDRESS=<no-reply@ratewise.dev>
+EMAIL_PROVIDER=SMTP
